[project]
name = "gridfinity-server"
version = "0.1.0"
description = "FastAPI server for generating Gridfinity STL files"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "cqgridfinity>=0.4",
    "cadquery>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that do CAD generation (deselect with '-m \"not slow\"')",
]
